chore: screenshot base64
